force-app/main/default/objects/leaseworks__Chart_Of_Accounts__c/leaseworks__Chart_Of_Accounts__c.object-meta.xml
<CustomObject>
    <description>COA  is a subset of their entire GL COA
Used to list of all the ledger accounts used by the business to record its financial transactions. It provides a structured framework that facilitates the recording, reporting, and analysis of financial data.
Population Requirement Details: Note - Cash GL account to be mapped on individual Bank Accounts
[MODULE: Accounting]
[LOAD: Yes]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Chart Of Accounts</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chart Of Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>