force-app/main/default/objects/leaseworks__Chart_Of_Accounts__c/fields/leaseworks__Account_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Account_Type__c</fullName>
    <inlineHelpText>Select inherent account type of GL account you are setting up</inlineHelpText>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Liability</fullName>
            </value>
            <value>
                <fullName>Equity</fullName>
            </value>
            <value>
                <fullName>Expense</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Contra-Asset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>