force-app/main/default/objects/leaseworks__Chart_Of_Accounts__c/fields/leaseworks__GL_Account_Description__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__GL_Account_Description__c</fullName>
    <description>Enter GL account description that matches upstream accounting system</description>
    <inlineHelpText>Enter GL account description that matches upstream accounting system</inlineHelpText>
    <label>GL Account Description</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>