force-app/main/default/objects/leaseworks__Chart_Of_Accounts__c/fields/leaseworks__GL_Code__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__GL_Code__c</fullName>
    <inlineHelpText>Enter GL account that matches upstream accounting system</inlineHelpText>
    <label>GL Account Code</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>