force-app/main/default/objects/leaseworks__Chart_Of_Accounts__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__GL_Code__c</columns>
    <columns>leaseworks__GL_Account_Description__c</columns>
    <columns>leaseworks__Account_Type__c</columns>
    <columns>leaseworks__Account_Sub_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>